<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register.RegisterUnit">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:includeFontPadding="true"
            android:text="@string/register_unit"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textFontWeight="30dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unit_code"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Unit Name"
            android:inputType="text"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_design"
            android:layout_margin="10dp"
            android:text="@string/submit" />


    </LinearLayout>

</ScrollView>