<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textFontWeight="30dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:singleLine="true"
            android:inputType="textEmailAddress"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:singleLine="true"
            android:inputType="textPassword"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:layout_marginTop="20dp"
            android:onClick="goToAttend"
            android:background="@drawable/button_design"/>
    </LinearLayout>


</ScrollView>